# KrVoiceAI

./: .dockerignore  .gitignore  README.md  pyproject.toml  start_ui.bat
colab/: KrVoiceAI_Colab.ipynb  LatentSync_Colab.ipynb  clone.sh  compose.py  finish.sh  latentsync.sh  produce.sh  publish.sh  pull_worker.py  run.py  setup.sh  share_public.py  storyboard.py  worker.py
config/: banned_words.txt  default.yaml
config/presets/: avatar_voice_library.yaml  scene_templates.yaml
config/templates/: ecommerce.yaml  knowledge.yaml
docker/: Dockerfile.compose  Dockerfile.gpu  Dockerfile.local  docker-compose.yml  entrypoint-gpu.sh  entrypoint.gpu.sh
docs/: DEPLOYMENT.md  DESIGN.md
krvoiceai/: __init__.py  app.py
krvoiceai/api/: __init__.py  avatar_server.py  tts_server.py
krvoiceai/core/: __init__.py  audio_utils.py  base_module.py  config.py  ffmpeg_utils.py  gpu_runner.py  llm_client.py  logger.py  settings_manager.py  storage.py  text_similarity.py
krvoiceai/modules/: __init__.py  avatar_engine.py  broll_engine.py  cover_generator.py  originality_checker.py  publisher.py  (+7 more)
scripts/: build_docker.sh  download_models.sh  e2e_verify.py  setup_cloud_gpu.sh  setup_local.bat  setup_wav2lip_env.bat
tests/: conftest.py  test_acceptance_e2e.py  test_api_servers.py  test_app.py  test_avatar_engine.py  test_originality_checker.py  test_parallel_batch.py  test_pipeline_e2e.py  test_publisher.py  test_scaffold.py  test_script_extractor.py  test_script_writer.py  test_subtitle_engine.py  test_title_cover.py  test_tts_engine.py  test_ui_interactions.py  test_video_composer.py
web-koubo/: README.md  index.html  server.py
(+22 files in other folders)
